--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,7 +1,3 @@
-.sidebar{
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    padding: 48px 0 0;
-    box-shadow: inset -1px 0 0 rgb(0 0 0 / 10%);
+.field_SetPoints{
+    display: none;
 }
