--- a/view/index.html
+++ b/view/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" crossorigin="anonymous">
     <script src="../bower_components/jquery/dist/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="../controller/index.js"></script>
     <title>apiPage</title>
 </head>
 
@@ -20,20 +20,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" onclick = 'changeUrl("apiPage.html")'>API</a>
-                    <a class="nav-item nav-link" onclick = 'changeUrl("scriptPage.html")'>掛機</a>
+                    <a class="nav-item nav-link" onclick = 'changeUrl("api_and_script_page.html?api")'>API</a>
+                    <a class="nav-item nav-link" onclick = 'changeUrl("api_and_script_page.html?script")'>掛機</a>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             設定
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="gameSetting.html">遊戲</a>
-                            <a class="dropdown-item" onclick ='changeUrl("currencySetting.html")'>幣別</a>
-                            <a class="dropdown-item" href="languageSetting.html">語系</a>
+                            <a class="dropdown-item" onclick ='changeUrl("currency_and_game_and_language_setup_page.html?Game")'>遊戲</a>
+                            <a class="dropdown-item" onclick ='changeUrl("currency_and_game_and_language_setup_page.html?Currency")'>幣別</a>
+                            <a class="dropdown-item" onclick ='changeUrl("currency_and_game_and_language_setup_page.html?Language")'>語系</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="scriptSetting.html">腳本</a>
+                            <a class="dropdown-item" onclick ='changeUrl("script_setup_page.html")'>腳本</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="pathSetting.html#">路徑設定</a>
+                            <a class="dropdown-item" onclick ='changeUrl("path_setup_page.html")'>路徑設定</a>
                         </div>
                     </li>
                 </div>
@@ -42,7 +42,6 @@
         <div class="row" style="position: relative; top: 65px;">
             <div class="col">
                 <div>
-                    <div><span id="message"></span></div>
                     <form id="myForm">
                         <iframe id="myiframe" style=" height: 100%; width: 100%;" frameborder="0" scrolling="auto"></iframe>
                     </form>
@@ -57,11 +56,10 @@
         iframe.onload = function(){
             const iframeWin = iframe.contentWindow;
             iframe.style.height = iframeWin.document.body.scrollHeight + 'px';
-            iframeWin.require = window.require
+            iframeWin.require = window.require;
         }      
         function changeUrl(url){
             iframe.src = url;
-            document.title = url.split(".")[0];
         };        
          
     </script>
