--- a/view/index.html
+++ b/view/index.html
@@ -9,7 +9,7 @@
     <script src="../bower_components/jquery/dist/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../controller/index.js"></script>
-    <title>apiPage</title>
+    <title></title>
 </head>
 
 <body>
@@ -60,8 +60,8 @@
         }      
         function changeUrl(url){
             iframe.src = url;
-        };        
-         
+        };
+        
     </script>
 </body>
 
