--- a/view/currency_and_game_and_language_setup_page.html
+++ b/view/currency_and_game_and_language_setup_page.html
@@ -17,7 +17,9 @@
   <body>
     <ul class="nav" style="position: relative; float: left;">
       <li class="nav-item">
-        <button type="button" class="btn btn-primary" style="margin: 10px" data-toggle="modal" data-target="#addModal" >
+        <button type="button" class="btn btn-primary" style="margin: 10px" data-toggle="modal" data-target="#addModal"
+          onclick='$("#addId")[0].innerHTML = ""; 
+          $("#addName")[0].innerHTML = "";'>
           <span class="fas fa-plus"></span>新增name
         </button>
       </li>
