--- a/view/api_and_script_page.html
+++ b/view/api_and_script_page.html
@@ -85,7 +85,7 @@
           </div>
           
           <div>
-            <div class="form-group" style="display: inline-block;"> 
+            <div class="form-group" style="display: inline-block; margin-right: 20px;"> 
               <div style="display: inline-block;">
                 <label for="MemberAccount">帳　　號：</label> 
               </div>
@@ -95,7 +95,7 @@
             </div>
   
             <div class="form-group field_Login" style="display: inline-block;"> 
-              <div style="display: inline-block; margin-left: 20px;">
+              <div style="display: inline-block;">
                 <label for="Event">活　　動：</label> 
               </div>              
               <div class="form-check" style="display: inline-block; margin-left: 10px;">
@@ -155,7 +155,8 @@
             <span class="tip" style="font-size: 13px; display: block;">選否：送出後會開啟多個視窗，如要執行腳本請分別於console裡打上console.log("start")，停止執行請打console.log("end")</span>
 
           </div>
-          <button type="submit" style="display: block;" id="submit" class="btn btn-primary">送出</button>
+          <button type="submit" style="display: inline-block;" id="submit" class="btn btn-primary">送出</button>
+          <button type="button"  id="clearLog" class="btn btn-warning">清除log</button>
         </form>
       </div>
 
