--- a/view/currency_and_game_and_language_setup_page.html
+++ b/view/currency_and_game_and_language_setup_page.html
@@ -25,7 +25,7 @@
       </li>
       <li class="nav-item" style="margin-top: 10px; margin-right: 20px;">
         <form class="d-flex">
-          <input class="form-control me-2" aria-label="Search" id="search">
+          <input class="form-control me-2" aria-label="Search" id="search" style="width: 130px;">
         </form>
       </li>
       <li class="nav-item" style="margin-top: 10px;">
