modified Auto script

--- a/view/index.html
+++ b/view/index.html
@@ -38,6 +38,7 @@
                     </li>
                 </div>
             </div>
+            <span style="color:darkgrey; font-size: 12px;">如無法使用請先確認是否已安裝Redis(必要)&路徑設定是否正確</span>
         </nav>
         <div class="row" style="position: relative;">
             <div class="col">
