--- a/view/api_and_script_page.html
+++ b/view/api_and_script_page.html
@@ -114,9 +114,19 @@
                 <div style="display: inline-block;">
                   <select class="form-control" id="Event" disabled="disabled"></select>
                 </div>
-                
               </div>
             </div>
+
+          </div>
+
+          <div class="form-group" style="display: inline-block; margin-right: 20px;"> 
+            <div style="display: inline-block;">
+              <label for="other">其他參數：</label> 
+            </div>
+            <div style="display: inline-block;">
+              <input class="form-control" placeholder="key:value,key2:value2" style="width: 510px;" id="other" > 
+            </div>
+            
           </div>
           
           <div>
