--- a/view/index.html
+++ b/view/index.html
@@ -22,6 +22,7 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link" onclick = 'changeUrl("api_and_script_page.html?api")'>API</a>
                     <a class="nav-item nav-link" onclick = 'changeUrl("api_and_script_page.html?script")'>掛機</a>
+                    <a class="nav-item nav-link" onclick = 'changeUrl("betrecord_page.html?script")'>賽果驗證</a>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             設定
@@ -31,8 +32,10 @@
                             <a class="dropdown-item" onclick ='changeUrl("currency_and_game_and_language_setup_page.html?Currency")'>幣別</a>
                             <a class="dropdown-item" onclick ='changeUrl("currency_and_game_and_language_setup_page.html?Language")'>語系</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" onclick ='changeUrl("script_setup_page.html")'>腳本</a>
+                            <a class="dropdown-item" onclick ='changeUrl("script_setup_page.html")'>掛機腳本</a>
+                            <a class="dropdown-item" onclick ='changeUrl("betrecord_script_setup_page.html")'>賽果驗證腳本</a>
                             <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" onclick ='changeUrl("content_management_system_setup_page.html")'>後台帳密設定</a>
                             <a class="dropdown-item" onclick ='changeUrl("path_setup_page.html")'>路徑設定</a>
                         </div>
                     </li>
