api do not call mongodb

--- a/view/setup_page.html
+++ b/view/setup_page.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../bower_components/fontawesome-free/css/all.min.css">
     <script src="../bower_components/bootstrap-table/dist/bootstrap-table.min.js"></script>
     <script src="../controller/publicMethod.js"></script>
-    <script src="../controller/currency_and_game_and_language_setup_page.js"></script>
+    <script src="../controller/setup_page.js"></script>
     <title></title>
     <script type="text/javascript">      
         function filesInput(){
