--- a/view/index.html
+++ b/view/index.html
@@ -27,9 +27,10 @@
                             設定
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" onclick ='changeUrl("currency_and_game_and_language_setup_page.html?Game")'>遊戲</a>
-                            <a class="dropdown-item" onclick ='changeUrl("currency_and_game_and_language_setup_page.html?Currency")'>幣別</a>
-                            <a class="dropdown-item" onclick ='changeUrl("currency_and_game_and_language_setup_page.html?Language")'>語系</a>
+                            <a class="dropdown-item" onclick ='changeUrl("setup_page.html?Game")'>遊戲</a>
+                            <a class="dropdown-item" onclick ='changeUrl("setup_page.html?Currency")'>幣別</a>
+                            <a class="dropdown-item" onclick ='changeUrl("setup_page.html?Language")'>語系</a>
+                            <a class="dropdown-item" onclick ='changeUrl("setup_page.html?AgentKey")'>商戶密鑰</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" onclick ='changeUrl("script_setup_page.html")'>腳本</a>
                             <div class="dropdown-divider"></div>
