20220209-add release&live , adjust agentcode , add script export by self

--- a/view/api_and_script_page.html
+++ b/view/api_and_script_page.html
@@ -79,7 +79,7 @@
                 <label for="AgentCode">商戶代碼：</label> 
               </div>
               <div style="display: inline-block;">
-                <input class="form-control" style="width: 200px;" id="AgentCode" aria-required="true" required>
+                <select class="form-control" style="width: 200px;" id="AgentCode"> </select> 
               </div>
             </div> 
           </div>
