--- a/view/script_setup_page.html
+++ b/view/script_setup_page.html
@@ -60,6 +60,7 @@
         <tr>
           <th scope="col">#</th>
           <th scope="col">腳本名稱</th>
+          <th scope="col">匯出</th>
           <th scope="col">編輯</th>
           <th scope="col">刪除</th>
         </tr>
