--- a/view/script_setup_page.html
+++ b/view/script_setup_page.html
@@ -18,19 +18,7 @@
   <ul class="nav" style="position: relative; float: left;">
     <li class="nav-item">
       <button type="button" class="btn btn-primary" style="margin: 10px" data-toggle="modal" data-target="#addModal"
-        onclick='$("#addTable tr").remove(); 
-        $("#name")[0].disabled = false; 
-        $("#name")[0].value = ""; 
-        $("#version")[0].value = ""; 
-        $("#addMessage")[0].innerHTML = "";
-        $(".modal-title")[0].innerHTML = "新增腳本";
-        $("#addBtn")[0].innerHTML = "確定新增";
-        $("#unassigned")[0].checked = true;
-        $("#defaultGameWindows")[0].checked = true;
-        $("#width")[0].value = $("#gameWindows")[0].value.split(",")[0];
-        $("#height")[0].value = $("#gameWindows")[0].value.split(",")[1];
-        $("#version")[0].disabled = true;
-        $("#gameWindows")[0].disabled = false;'>
+        onclick='clickAddBtn()'>
         <span class="fas fa-plus"></span>新增腳本
       </button>
     </li>
@@ -117,8 +105,8 @@
                   </div>
                   <div style="display: inline-block;">
                     <select class="form-control" id="gameWindows">
-                      <option value="553,959" selected="selected">直式</option>
-                      <option value="929,653">橫式</option>
+                      <option value="Portrait" selected="selected">直式</option>
+                      <option value="Landscape">橫式</option>
                     </select>
                   </div>
                 </div>
@@ -133,6 +121,11 @@
                 <div style="display: inline-block;">
                   <div class="form-group"><span><span class="text-danger" style="font-size: 20px;">*</span>遊戲寬度：</span><input aria-required="true" id="width"  required></div>
                   <div class="form-group"><span><span class="text-danger" style="font-size: 20px;">*</span>遊戲長度：</span><input aria-required="true" id="height" required></div>
+                </div>
+                <div style="display: inline-block;">
+                  <button id="defaultWindowSizeUpdate" class="btn btn-outline-warning" type="button" onclick='clickdefaultWindowSizeUpdate()'>
+                    <span class="fas fa-save"></span> 變更預設
+                  </button>
                 </div>
                 <hr class="my-3">
                 <div style="display: inline-block;">
@@ -167,6 +160,35 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript">
+    async function clickAddBtn(){
+      $("#addTable tr").remove(); 
+      $("#name")[0].disabled = false; 
+      $("#name")[0].value = ""; 
+      $("#version")[0].value = ""; 
+      $("#addMessage")[0].innerHTML = "";
+      $(".modal-title")[0].innerHTML = "新增腳本";
+      $("#addBtn")[0].innerHTML = "確定新增";
+      $("#unassigned")[0].checked = true;
+      $("#defaultGameWindows")[0].checked = true;
+      $("#width")[0].value = $("#gameWindows")[0].value.split(",")[0];
+      $("#height")[0].value = $("#gameWindows")[0].value.split(",")[1];
+      $("#version")[0].disabled = true;
+      $("#gameWindows")[0].disabled = false;
+      let defaultWindowSize = await parent.psotLocalhostApi('/getList','defaultWindowSize');
+      $("#width")[0].value = defaultWindowSize["returnObject"][$("#gameWindows")[0].value].split(",")[0];
+      $("#height")[0].value = defaultWindowSize["returnObject"][$("#gameWindows")[0].value].split(",")[1];
+    }
+
+    async function clickdefaultWindowSizeUpdate(){
+      let datas = {};
+      datas['data'] = {};
+      datas['tableName'] = "defaultWindowSize";
+      datas['data'][$("#gameWindows")[0].value] = $("#width")[0].value+","+$("#height")[0].value
+      let response = await parent.psotLocalhostApi('/updateData',datas);
+    }
+    
+  </script>
 </body>
 
 </html>
