add env at path setup page

--- a/view/path_setup_page.html
+++ b/view/path_setup_page.html
@@ -17,6 +17,12 @@
 <body>
   <ul class="nav" style="position: relative; float: left;">
     <li class="nav-item" style="margin: 10px;">
+      <div style="display: inline-block;">目前設定的環境：</div>
+      <div style="display: inline-block;" id="env"></div>
+    </li>
+  </ul>
+  <ul class="nav" style="position: relative; float: left;">
+    <li class="nav-item" style="margin: 10px;">
       <div class="alert alert-success" role="alert" style="padding-top: 5px; padding-bottom: 5px; margin-bottom: 0px; display: none;">
         <span id="message"></span>
       </div>
