--- a/view/index.html
+++ b/view/index.html
@@ -37,6 +37,7 @@
                             <a class="dropdown-item" onclick ='changeUrl("path_setup_page.html")'>路徑設定</a>
                         </div>
                     </li>
+                    <a class="nav-item nav-link" onclick = 'changeUrl("help_page.html")'>說明</a>
                 </div>
 
             </div>
@@ -50,7 +51,6 @@
                 </select>
                 </div>
             </ul>
-            <span style="color:darkgrey; font-size: 9px; bottom: 0px;  position: absolute; ">如無法使用請先確認是否已安裝Redis(必要)&路徑設定是否正確</span>
         </nav>
         <div class="row" style="position: relative;">
             <div class="col">
