add run multiple independent Chrome

--- a/view/help_page.html
+++ b/view/help_page.html
@@ -37,6 +37,7 @@
 
             <h3>其他：</h3>
             <li>按 Ctrl+Shift+i 可開啟此app的developer tools</li>
+            <li>關閉此app後，用此app開啟的瀏覽器會全部一起關閉</li>
 
         </ul>
     </div>
