--- a/view/index.html
+++ b/view/index.html
@@ -33,8 +33,8 @@
                             <a class="dropdown-item" onclick ='changeUrl("setup_page.html?Language")'>語系</a>
                             <a class="dropdown-item" onclick ='changeUrl("setup_page.html?AgentKey")'>商戶密鑰</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" onclick ='changeUrl("script_setup_page.html")'>掛機腳本</a>
-                            <a class="dropdown-item" onclick ='changeUrl("betrecord_script_setup_page.html")'>賽果驗證腳本</a>
+                            <a class="dropdown-item" onclick ='changeUrl("script_setup_page.html?hangUpScript")'>掛機腳本</a>
+                            <a class="dropdown-item" onclick ='changeUrl("script_setup_page.html?betRecordScript")'>賽果驗證腳本</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" onclick ='changeUrl("path_setup_page.html")'>路徑設定</a>
                         </div>
