--- a/view/help_page.html
+++ b/view/help_page.html
@@ -19,7 +19,7 @@
             <li>商戶代碼會根據右上角顯示的環境，對應顯設定的值</li>
             <li>活動點選參加時，會以當前顯示的商戶代碼及幣別搜尋。如需重新搜尋請先點不參加再點參加</li>
             <li>其他參數都不用加""</li>
-            <li>點送出後如果卡住就等一下後再繼續使用</li>
+            <li>點送出後如果2秒內沒回應會timeout</li>
 
             <h3>掛機使用方法：</h3>
             <li>除了其他參數可空白，其他欄位均為必填</li>
@@ -29,7 +29,7 @@
             <li>其他參數都不用加""</li>
             <li>腳本需到 設定>掛機腳本 裡新增</li>
             <li>可在各環境使用掛機功能</li>
-            <li>點送出後如果卡住就等一下後再繼續使用</li>
+            <li>點送出後如果2秒內沒回應會timeout</li>
 
             <h3>新增掛機腳本：</h3>
             <li>滑鼠點擊的位置可先開啟最上方的demo，點擊遊戲畫面後console會列印位置複製貼上即可</li>
@@ -38,6 +38,7 @@
             <h3>其他：</h3>
             <li>按 Ctrl+Shift+i 可開啟此app的developer tools</li>
             <li>關閉此app後，用此app開啟的瀏覽器會全部一起關閉</li>
+            <li>匯入任何資料如無回應時請重新訪問該頁面並再操作一次匯入!!</li>
 
         </ul>
     </div>
